@@ -2,6 +2,8 @@
  - implemented polygon filters
  - condense context menus, add export context menu to all plots
  - add computation of Young's modulus and crosstalk correction
+ - add user-defined fluorescence labels in QuickView
+ - add legend to trace in QuickView
 2.0.0a23
  - add more update functions to fix frozen macOS app
  - improve plot visualizations
